@@ -1,3 +1,10 @@
+2004-06-18 Alvaro del Castillo  <acs@barrapunto.com>
+
+	* libplanner/mrp-task.c: (task_remove_subtree_cb):
+	* src/planner-gantt-chart.c: (gantt_chart_insert_task),
+	(gantt_chart_relation_added), (gantt_chart_task_removed),
+	(gantt_chart_tree_node_remove): Fix bug #141346.
+
 2004-06-18  Richard Hult  <richard@imendio.com>
 
 	* src/planner-gantt-row.c (gantt_row_notify_cb): Update when
